add a new paper

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			</div>
 			<div class="unit-80">
 				Hi, I’m Tong XIAO. I am currently working toward the PhD degree at the College of Computer Science and Electronic Engineering,
-				Hunan University. My research interests include log analysis, failure detection and prediction, and deep learning.
+				Hunan University. My research interests include log analysis, anomaly detection, and failure prediction.
 			</div>
 		</div>
 	</div>
@@ -65,13 +65,18 @@
 <div class="publications section second" id="publications">
 	<div class="container">
 		<h1>Publications</h1>
-		<ol>
+
 			<li>
-				<b>DeepGS: Deep Representation Learning of Graphs and Sequences for Drug-Target Binding Affinity Prediction </b>(Accepted)<br>
+				<b>LPV: A Log Parser Based on Vectorization for Offline and Online Log Parsing </b><br>
+				<b>Tong Xiao</b>, Zhe Quan*, Zhi-Jie Wang*, Kaiqi Zhao, and Xiangke Liao<br>
+				<i>ICDM2020</i>
+			</li>
+			<li>
+				<b>DeepGS: Deep Representation Learning of Graphs and Sequences for Drug-Target Binding Affinity Prediction </b><br>
 				Xuan Lin, Kaiqi Zhao, <b>Tong Xiao</b>, Zhe Quan, Zhi-Jie Wang, Philip S. Yu<br>
 				<i>ECAI2020</i>
 			</li>
-		</ol>
+
 	</div>
 </div>
 
