--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 				<img src="img/xiao.jpg">
 			</div>
 			<div class="unit-80">
-				Hi, I’m Tong XIAO. I am currently working toward the PhD degree at the College of Computer Science and Electronic Engineering,
-				Hunan University. My research interests include log analysis, anomaly detection, and failure prediction.
+				Hi, my name is Tong XIAO. I am currently working toward the PhD degree at the College of Computer Science and Electronic Engineering,
+				Hunan University, Changsha, China. My research interests focus on automated log analysis, anomaly detection, failure prediction, and AIOps.
 			</div>
 		</div>
 	</div>
@@ -54,8 +54,8 @@
 			<td width="120"><img src="img/hnu.jpeg"></td>
 			<td>
 				<font size="6px"><b>Hunan University</b></font><br/>
-				Doctor of Philosophy - PhD, Computer Science<br/>
-				<font color="#8c8c8c">2018 - 2022</font>
+				Doctor of Philosophy - PhD, Computer Science and Technology<br/>
+				<font color="#8c8c8c">2018 - Present</font>
 			</td>
 		</table>
 	</div>
@@ -67,14 +67,24 @@
 		<h1>Publications</h1>
 
 			<li>
-				<b>LPV: A Log Parser Based on Vectorization for Offline and Online Log Parsing </b><br>
-				<b>Tong Xiao</b>, Zhe Quan*, Zhi-Jie Wang*, Kaiqi Zhao, and Xiangke Liao<br>
-				<i>ICDM2020</i>
+				<font size="4px"><b>Loader: A Log Anomaly Detector Based on Transformer</b></font><br>
+				<b>Tong Xiao</b>, Zhe Quan*, Zhi-Jie Wang, Yuquan Le, Yunfei Du, Xiangke Liao, Kenli Li, and Keqin Li<br>
+				<i>IEEE Transactions on Services Computing</i>
 			</li>
 			<li>
-				<b>DeepGS: Deep Representation Learning of Graphs and Sequences for Drug-Target Binding Affinity Prediction </b><br>
+				<font size="4px"><b>LPV: A Log Parsing Framework Based on Vectorization</b></font><br>
+				<b>Tong Xiao</b>, Zhe Quan, Zhi-Jie Wang*, Kaiqi Zhao, Xiangke Liao, Huang Huang, Yunfei Du, and Kenli Li<br>
+				<i>IEEE Transactions on Network and Service Management</i>
+			</li>
+			<li>
+				<font size="4px"><b>LPV: A Log Parser Based on Vectorization for Offline and Online Log Parsing</b></font><br>
+				<b>Tong Xiao</b>, Zhe Quan*, Zhi-Jie Wang*, Kaiqi Zhao, and Xiangke Liao<br>
+				<i>ICDM 2020</i>
+			</li>
+			<li>
+				<font size="4px"><b>DeepGS: Deep Representation Learning of Graphs and Sequences for Drug-Target Binding Affinity Prediction</b></font><br>
 				Xuan Lin, Kaiqi Zhao, <b>Tong Xiao</b>, Zhe Quan, Zhi-Jie Wang, Philip S. Yu<br>
-				<i>ECAI2020</i>
+				<i>ECAI 2020</i>
 			</li>
 
 	</div>
@@ -83,7 +93,7 @@
 <footer>
 	<div class="container">
 		<div class="container text-centered">
-			<p>Copyright &copy; 2020. All rights reserved.</p>
+			<p>Copyright &copy; 2023. All rights reserved.</p>
 		</div>
 	</div>
 </footer>
