--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 				<img src="img/xiao.jpg">
 			</div>
 			<div class="unit-80">
-				Hi, my name is Tong XIAO. I am currently working toward the PhD degree at the College of Computer Science and Electronic Engineering,
-				Hunan University, Changsha, China. My research interests focus on automated log analysis, anomaly detection, failure prediction, and AIOps.
+				Hi all, my name is Tong XIAO. I am currently a Postdoc Fellow with the Department of Computer Science and Technology, Tsinghua University.
+				I obtained my PhD degree from the College of Computer Science and Electronic Engineering, Hunan University, Changsha, China.
+				My research interests focus on automated log analysis, anomaly detection, failure prediction, and AIOps.
 			</div>
 		</div>
 	</div>
@@ -55,7 +56,7 @@
 			<td>
 				<font size="6px"><b>Hunan University</b></font><br/>
 				Doctor of Philosophy - PhD, Computer Science and Technology<br/>
-				<font color="#8c8c8c">2018 - Present</font>
+				<font color="#8c8c8c">2018 - 2024</font>
 			</td>
 		</table>
 	</div>
