--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 				<img src="img/xiao.jpg">
 			</div>
 			<div class="unit-80">
-				Hi all, my name is Tong XIAO. I am currently a Postdoc Fellow with the Department of Computer Science and Technology, Tsinghua University.
+				Hi all, my name is Tong XIAO. I am currently a Postdoctoral Fellow with the Department of Computer Science and Technology, Tsinghua University.
 				I obtained my PhD degree from the College of Computer Science and Electronic Engineering, Hunan University, Changsha, China.
-				My research interests focus on automated log analysis, anomaly detection, failure prediction, and AIOps.
+				My current research interests include automated log analysis, anomaly detection, failure prediction, and AIOps.
 			</div>
 		</div>
 	</div>
